Fix completion of long names